# ti_debug

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  README.md  TEMP.TXT  basic_ble.syscfg  build.sh  empty.c  main_freertos.c
Release/: basic_ble_LP_EM_CC2340R53_freertos_ticlang_linkInfo.xml  ccsObjs.opt  makefile
Release/syscfg/: FreeRTOSConfig.h  ti_ble_config.c  ti_drivers_config.c  ti_drivers_config.h  ti_freertos_config.c  ti_radio_config.c  ti_radio_config.h  ti_utils_build_compiler.opt  ti_utils_build_linker.cmd.genmap
app/: app_l2cap_coc.c  app_main.c  app_main.h  app_menu.c  app_pairing.c  app_peripheral.c
app/Profiles/: app_simple_gatt.c
common/Startup/: osal_icall_ble.c
linker/gcc/: lpf3_cc23xx_freertos.lds
source/ble5stack/basic_ble/common/Startup/: main_freertos.c
source/freertos/startup/: startup_cc23x0r5_gcc.c
source/syscfg/: ti_ble_config.h
source/ti/ble5stack_flash/common/cc26xx/iar/: lpf3_app_and_stack_freertos.icf
source/ti/ble5stack_flash/controller/cc26xx/inc/: ll_user_config.h
source/ti/ble5stack_flash/icall/stack/: ble_user_config_stack.c
source/ti/common/cc26xx/flash_interface/internal/: flash_interface_internal.c
source/ti/common/cc26xx/oad/: ext_flash_layout.h
source/ti/common/ecdsa_lpf3/: ecdsa_lpf3.c  ecdsa_lpf3.h
source/ti/common/flash/no_rtos/extFlash/: bsp_spi_cc13x2_cc26x2.c  bsp_spi_cc13x4_cc26x4.c  bsp_spi_lpf3.c
source/ti/common/hsm/: HSMBareMetal.c  HSMBareMetal.h  HSMBareMetalECCUtility.c  HSMBareMetalECCUtility.h
source/ti/common/hsm/eccBareMetal/src/: eccBareMetal.c
source/ti/common/secure_boot/: secure_boot.syscfg
source/ti/common/time/: time_clock.c  time_clock.h  utc_clock.c  utc_clock.h
source/ti/devices/: DeviceFamily.h
source/ti/devices/cc23x0r5/driverlib/: aes_gcc.s  aes_iar.s  aes_ticlang.s  copylist.h  sw_chacha.c  sw_ecrypt-config.h  sw_ecrypt-machine.h  sw_ecrypt-portable.h  sw_ecrypt-sync.h  sw_poly1305-donna-32.h  sw_poly1305-donna.c  sw_poly1305-donna.h
source/ti/devices/cc23x0r5/inc/: hw_ccfg.h  hw_device.h  hw_fcfg.h  hw_platform.h
source/ti/drivers/apu/: APULPF3_FW.h
source/ti/drivers/cryptoutils/hsm/: HSMLPF3Utility.c
source/ti/drivers/itm/: ITMLPF3.c  ITMLPF3.h
source/ti/drivers/trng/: TRNGLPF3HSM.c  TRNGLPF3HSM.h
source/ti/posix/freertos/: PTLS.c
